<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="@string/connsets" />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="100dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/usernameST" />

            <EditText
                android:id="@+id/usernameDBS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/user_hint"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/passwordST" />

            <EditText
                android:id="@+id/passwordDBS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/pass_hint"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/dbnameST" />

            <EditText
                android:id="@+id/dbname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/dbname_hint"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/portST" />

            <EditText
                android:id="@+id/port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/port_hint"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/urlST" />

            <EditText
                android:id="@+id/url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/host_hint"
                android:inputType="textUri" />
        </LinearLayout>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/connectAtDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect" />
    </LinearLayout>

</ScrollView>