<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.connectme2db.MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="283dp"
        android:layout_gravity="top"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="181dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="181dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/connect"
                android:color="#3ea7ca"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect" />

            <Button
                android:id="@+id/abort"
                android:color="#3ea7ca"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abort" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>