<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.connectme2db.QueryEditor" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Space
            android:layout_width="fill_parent"
            android:layout_height="101dp" />

        <TextView
            android:id="@+id/updateExecute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/queryEditorT" />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="181dp" />

        <EditText
            android:id="@+id/queryString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/queryStringT"
            android:inputType="textMultiLine" />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/queryStringExe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/queryStringExeT" />
    </LinearLayout>

</ScrollView>